@@ -17,3 +17,4 @@ depth: 1
 * Fix select elements expanding beyond their container when using a long option label (Sage Abdullah)
 * Fix timezone handling of `TemplateResponse`s for users with a custom timezone (Stefan Hammer, Sage Abdullah)
 * Ensure TableBlock initialisation correctly runs after load and its width is aligned with the parent panel (Dan Braghis)
+* Ensure that the JavaScript media files are loaded by default in Snippet index listings for date fields (Sage Abdullah)
